@@ -16,7 +16,7 @@ if "%RS_HOME%"=="" (
 :begin
 set GRAILS_HOME=%RS_HOME%
 rmdir /s /q %RS_HOME%\temp\projects
-set JAVA_OPTS=%JAVA_OPTS% -Xmx1024m
+set JAVA_OPTS=%JAVA_OPTS% -Xmx1024m -XX:MaxPermSize=128m
 CALL "%GRAILS_HOME%\bin\startGrails.bat" "%GRAILS_HOME%" com.ifountain.grails.RapidGrailsScriptRunner  %* -Dserver.port=12222 -Dgrails.work.dir=%RS_HOME%\temp -Dgroovy.sanitized.stacktraces="groovy.,org.codehaus.groovy.,java.,javax.,sun.,gjdk.groovy.,org.springframework.,org.mortbay.,net.sf.," -Dgroovy.full.stacktrace=false
 
 :end
